Added the functionality to the Hamburger button

--- a/src/scss/_global_style.scss
+++ b/src/scss/_global_style.scss
@@ -31,3 +31,19 @@ a {
     align-items: center;
   }
 }
+
+.flex-col {
+  display: flex;
+  flex-direction: column;
+  &-jc-c {
+    justify-content: center;
+  }
+
+  &-jc-sb {
+    justify-content: space-between;
+  }
+
+  &-ai-c {
+    align-items: center;
+  }
+}
