--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -18,7 +18,7 @@
     padding-bottom: 2.75rem;
   }
 
-  // Styling for the Na
+  // Styling for the Nav
   &-links {
     list-style-type: none;
     padding: 0;
@@ -56,11 +56,15 @@
   }
 
   &-popup-nav {
+    // Variables used for the calculation of the width of
+    // popup navbar.
     $x: 100%;
     $y: 3rem;
     min-height: 300px;
     position: absolute;
     background-color: $white;
+
+    // Calculate the width of the popup nav
     width: calc(#{$x} - #{$y});
     left: 1.5rem;
     right: 1.5rem;
@@ -89,6 +93,17 @@
   }
 }
 
+// Media queries.
+// For view port 330px and down
+@include breakpoint-down(small) {
+  .header {
+    &-title {
+      > h1 {
+        font-size: 32px;
+      }
+    }
+  }
+}
 // Below the medium view port width
 // make the links disappear for mobile
 // view.
