Added the footer component to the page

--- a/src/scss/_global_style.scss
+++ b/src/scss/_global_style.scss
@@ -27,6 +27,10 @@ a {
     justify-content: space-between;
   }
 
+  &-jc-sa {
+    justify-content: space-around;
+  }
+
   &-ai-c {
     align-items: center;
   }
