--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -36,6 +36,10 @@
       font-family: "Fraunces", serif;
       border: 0;
       border-radius: 25.2px;
+      &:hover {
+        background-color: rgba(255, 255, 255, 0.25);
+        color: #fff;
+      }
     }
   }
 
@@ -55,9 +59,23 @@
     margin-top: 3.25rem;
   }
 
+  // Styling for the speech box tail
+  &-popup-nav::before {
+    content: "";
+    width: 0px;
+    height: 0px;
+    position: absolute;
+    bottom: 300px;
+    right: 0px;
+    border-top: 7px solid transparent;
+    border-bottom: 7px solid #fff;
+    border-right: 7px solid #fff;
+    border-left: 7px solid transparent;
+  }
   &-popup-nav {
     // Variables used for the calculation of the width of
     // popup navbar.
+    position: relative;
     $x: 100%;
     $y: 3rem;
     min-height: 300px;
